--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -32,4 +32,9 @@
     <!-- Add your actions here -->
   </actions>
 
+  <application-components>
+    <component>
+      <implementation-class>com.morganey.PluginRegistration</implementation-class>
+    </component>
+  </application-components>
 </idea-plugin>
