Add Morganey Run Configuration
Signed-off-by: Tom Needham <06needhamt@gmail.com>

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -30,6 +30,9 @@
 
       <fileEditorProvider implementation="com.morganey.editor.MorganeyFileEditorProvider">
       </fileEditorProvider>
+      <configurationType implementation="com.morganey.run.MorganeyRunConfigurationType">
+      </configurationType>
+
   </extensions>
 
   <actions>
