Fix Morganey File Extension
Signed-off-by: Tom Needham <06needhamt@gmail.com>

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -25,7 +25,7 @@
 
 
   <extensions defaultExtensionNs="com.intellij">
-      <fileType.fileViewProviderFactory filetype="morg" implementationClass="com.morganey.editor.MorganeyFileViewProvider">
+      <fileType.fileViewProviderFactory filetype="mgn" implementationClass="com.morganey.editor.MorganeyFileViewProvider">
       </fileType.fileViewProviderFactory>
 
       <fileEditorProvider implementation="com.morganey.editor.MorganeyFileEditorProvider">
